--- a/styles/_media-queries.scss
+++ b/styles/_media-queries.scss
@@ -1,1 +1,11 @@
-// 18:00
+@mixin tablet {
+    @media  screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin mobile {
+    @media  screen and (max-width: 280px) {
+        @content;
+    }
+}
